--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb+srv://nafijrahaman2022:nafijpro@cluster0.h53go.mongodb.net/myDatabase?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://nafijrahaman2022:pronafij@cluster0.h53go.mongodb.net/myDatabase?retryWrites=true&w=majority
+PORT=3000
