--- a/package.json
+++ b/package.json
@@ -1,35 +1,29 @@
 {
-  "name": "chat-app",
+  "name": "messenger-clone",
   "version": "1.0.0",
-  "description": "A chat application with file uploads, quick reactions, and MongoDB storage",
+  "description": "A Messenger Clone App",
   "main": "server.js",
-"scripts": {
-  "start": "node server.js"
-
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "archiver": "^5.3.1",
+    "archiver": "^5.3.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "http": "0.0.1-security",
-    "mongoose": "^7.0.4",
+    "mongoose": "^7.3.1",
     "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.7.2"
+    "path": "^0.12.7",
+    "socket.io": "^4.7.2",
+    "nodemon": "^2.0.22"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
+  "devDependencies": {},
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.0.0"
   },
-  "keywords": [
-    "chat",
-    "socket.io",
-    "express",
-    "mongodb",
-    "file-upload"
-  ],
-  "author": "NAFIJ PRO",
+  "author": "NAFIJ",
   "license": "MIT"
 }
