--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "mongodb",
     "file-upload"
   ],
-  "author": "NAFIJ",
+  "author": "NAFIJ PRO",
   "license": "ISC",
   "dependencies": {
     "archiver": "^5.3.0",
