--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "start-private": "node server1.js", // New script to start private chat server
-    "dev-private": "nodemon server1.js", // New script to start private chat server in dev mode
+    "start-private": "node server1.js",
+    "dev-private": "nodemon server1.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -38,4 +38,4 @@
   "devDependencies": {
     "nodemon": "^2.0.19"
   }
-}
+  }
